feat: add api schema and backend impl for fetching all ai avatar vids
